# TONPROBE

./: .env.example  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: repos.toml  settings.toml
config/rules/: func_rules.toml
config/rules/cpp_queries/: unsafe_casts.ql
docs/: address-investigation-2026-04-23.md  database-schema.sql  design-spec.md  implementation-plan.md
scripts/: bootstrap.sh  build_cpp_harnesses.sh  inspect_ton_addresses.py  reset_testnet.sh
tests/: test_cli.py  test_deduplicator.py  test_func_detectors.py  test_gas_model.py  test_ingestion.py  test_scorer.py  test_semantic_layer.py
tonprobe/: __init__.py  cli.py
tonprobe/dynamic/: engine.py
tonprobe/dynamic/api_fuzzer/: atheris_runner.py  response_inspector.py
tonprobe/dynamic/fuzzing/: corpus_manager.py  coverage_merger.py  cpp_fuzzer.py
tonprobe/dynamic/sandbox/: adversarial_generator.py  blueprint_runner.py  invariant_generator.py
tonprobe/dynamic/testnet/: control_api.py  provisioner.py
tonprobe/findings/: deduplicator.py  manager.py  poc_generator.py  scorer.py
tonprobe/findings/templates/: api_reproducer.py.jinja  cpp_reproducer.cpp.jinja  smartcontract_poc.ts.jinja
tonprobe/ingestion/: api_spec_builder.py  audit_scraper.py  code_indexer.py  diff_analyzer.py  engine.py  git_watcher.py
tonprobe/semantic/: dot_renderer.py  gas_model.py  graph_analyzer.py  layer.py  message_flow_graph.py
tonprobe/static/: engine.py  normalizer.py
tonprobe/static/cpp/: clang_runner.py  (+3 more)
tonprobe/ui/: dashboard.py  export.py  finding_detail.py  review_queue.py
(+13 files in other folders)
